--- a/index.html
+++ b/index.html
@@ -119,6 +119,20 @@
         <p>© 2025 sysfx. All rights reserved.</p>
     </footer>
 
+    <script>
+document.addEventListener("DOMContentLoaded", function () {
+    const text = "Providing next-gen tech solutions";
+    let index = 0;
+    function typeEffect() {
+        if (index < text.length) {
+            document.getElementById("typing-effect").innerHTML += text.charAt(index);
+            index++;
+            setTimeout(typeEffect, 100); // Adjust speed here (lower = faster)
+        }
+    }
+    typeEffect();
+});
+</script>
     <script src="script.js"></script>
 </body>
 
