--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="logo-container">
             <img src="logo.jpg" alt="sysfx Logo" class="spinning-logo">
         </div>
-        <h1>sysfx - Sys Fix Tech Solutions</h1>
+        <h1>sysfx</h1>
         <h2 id="typing-effect"></h2>
         <nav>
             <ul>
@@ -32,7 +32,9 @@
             </ul>
         </nav>
     </header>
-
+<div class="scrolling-text">
+    <span>N-TEC is now sysfx! Welcome to a new era of tech solutions!</span>
+</div>
     <main>
         <section class="welcome">
             <h2>Welcome to sysfx!</h2>
