--- a/index.html
+++ b/index.html
@@ -1,32 +1,120 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sysfx - Providing next-gen tech solutions</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <title>sysfx - Sys Fix Tech Solutions</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head><body>
     <header>
+        <div class="logo-container">
+            <img src="logo.jpg" alt="sysfx Logo" class="spinning-logo">
+        </div>
+        <h1>sysfx</h1>
+        <h2 id="typing-effect"></h2>
         <nav>
-            <a href="#home">Home</a>
-            <a href="#events">Events</a>
-            <a href="#support">Get Support</a>
-            <a href="#community">Community</a>
-            <a href="#about">About</a>
-        </nav>
-        <button id="darkModeToggle">🌙</button>
-        <div id="typing-effect"></div>
-    </header>
+            <ul>
+                <li><a href="#events">Events</a></li>
+                <li><a href="#support">Get Support</a></li>
+                <li><a href="#community">Community</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Our Services</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#contact">Contact</a></li></ul>
+    </nav>
+</header>
 
-    <section id="home">
-        <h1>Welcome to sysfx</h1>
-        <p>Your trusted partner in technology solutions.</p>
+<div class="scrolling-text">
+    <span>N-TEC is now sysfx! Welcome to a new era of tech solutions!</span>
+</div>
+    <main>
+        <section class="welcome">
+            <h2>Welcome to sysfx!</h2>
+            <p>We provide expert tech solutions, including repairs, security, web development, and networking.</p>
+            <p>At Sys Fix, our mission is to bring suitable technology to our clients with precision and expertise.</p>
+            <p>Contact us for support at: <a href="mailto:nick@sysfx.net" class="email-link">nick@sysfx.net</a></p>
+            <button id="darkModeToggle">Toggle Dark Mode</button>
+        </section><section id="services" class="services">
+        <h2>Our Services</h2>
+        <div class="service-grid">
+            <div class="service">
+                <i class="fas fa-laptop"></i>
+                <h3>Computer Repair</h3>
+                <p>Fast and reliable repairs for all types of computers.</p>
+            </div>
+            <div class="service">
+                <i class="fas fa-shield-alt"></i>
+                <h3>Cybersecurity</h3>
+                <p>Protect your data with our comprehensive security solutions.</p>
+            </div>
+            <div class="service">
+                <i class="fas fa-code"></i>
+                <h3>Web Development</h3>
+                <p>Create a stunning online presence with our web development services.</p>
+            </div>
+            <div class="service">
+                <i class="fas fa-network-wired"></i>
+                <h3>Networking</h3>
+                <p>Set up and maintain a robust and secure network for your business.</p>
+            </div>
+            <div class="service">
+                <i class="fas fa-cloud"></i>
+                <h3>Cloud Solutions</h3>
+                <p>Migrate to the cloud and optimize your IT infrastructure.</p>
+            </div>
+            <div class="service">
+                <i class="fas fa-phone"></i>
+                <h3>IT Support</h3>
+                <p>24/7 IT support to keep your systems running smoothly.</p>
+            </div>
+        </div>
     </section>
 
-    <section id="scrollTopButton" title="Go to top">↑</section>
 
-    <script src="script.js"></script>
-</body>
-</html>
+    <section id="events" class="events">
+        <h2>Events & Workshops</h2>
+        <p>Join our upcoming sessions on cybersecurity, web development, and more. Stay ahead in the tech world!</p>
+        <ul>
+            <li>Cybersecurity 101 - March 10</li>
+            <li>Intro to Web Dev - March 15</li>
+            <li>Networking Essentials - March 22</li>
+        </ul>
+    </section>
+
+    <section id="testimonials" class="testimonials">
+        <h2>Testimonials</h2>
+        <div class="testimonial">
+            <p>"Sysfx provided excellent service. They fixed my computer quickly and efficiently." - John Doe</p>
+        </div>
+        <div class="testimonial">
+            <p>"I'm very happy with the website they built for my business. It's modern and easy to use." - Jane Smith</p>
+        </div>
+    </section>
+
+    <section id="about" class="about">
+        <h2>About Us</h2>
+        <p>Sysfx is a team of experienced tech professionals dedicated to providing top-notch solutions to our
+            clients. We are passionate about technology and committed to delivering exceptional service.</p>
+    </section>
+
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
+        <p>Get in touch with us for all your tech needs.</p>
+        <p>Email: <a href="mailto:nick@sysfx.net" class="email-link">nick@sysfx.net</a></p>
+        <p>Phone: (123) 456-7890</p>
+        <p>Address: 123 Main Street, Anytown, CA 91234</p>
+    </section>
+
+</main>
+
+<footer>
+    <p>© 2025 sysfx. All rights reserved.</p>
+</footer>
+
+<script>
+
+document.addEventListener("DOMContentLoaded", function () { const text = "Providing next-gen tech solutions"; let index = 0; function typeEffect() { if (index < text.length) { document.getElementById("typing-effect").innerHTML += text.charAt(index); index++; setTimeout(typeEffect, 100); // Adjust speed here (lower = faster) } } typeEffect(); }); </script> <script src="script.js"></script>
+
+</body></html>
