--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <script>
 document.addEventListener("DOMContentLoaded", function () {
-    const text = "Next-gen tech solutions.";
+    const text = "Providing next-gen tech solutions";
     let index = 0;
     function typeEffect() {
         if (index < text.length) {
