--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <h2>Contact Us</h2>
             <p>Get in touch with us for all your tech needs.</p>
             <p>Email: <a href="mailto:nick@sysfx.net" class="email-link">nick@sysfx.net</a></p>
-            <p>Phone: (123) 456-7890</p>
+            <p>Phone: (860) 375-4425</p>
             <p>Address: 123 Main Street, Anytown, CA 91234</p>
         </section>
 
@@ -123,7 +123,7 @@
 
     <script>
 document.addEventListener("DOMContentLoaded", function () {
-    const text = "Providing next-gen tech solutions";
+    const text = "Next-gen tech solutions.";
     let index = 0;
     function typeEffect() {
         if (index < text.length) {
