--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-    
-    <header class="glass-morphism">
+    <div id="particles-js" class="particles-container"></div>
+    <header class="glass-morphism" role="banner">
         <div class="status-bar">
-            <div id="current-time"></div>
-            <div id="weather-widget">
+            <div id="current-time" aria-live="polite"></div>
+            <div id="weather-widget" aria-live="polite">
                 <i class="fas fa-spinner fa-spin"></i> Loading weather...
             </div>
         </div>
         
         <div class="logo-container">
-            <img src="logo.jpg" alt="sysfx Logo" class="spinning-logo">
+            <img src="logo.jpg" alt="sysfx Logo, a symbol of tech expertise" class="spinning-logo" loading="lazy">
         </div>
         <h1>sysfx</h1>
-        <h2 id="typing-effect" class="gradient-text"></h2>
-        <nav>
+        <h3 id="typing-effect" class="gradient-text"></h3>
+        <nav role="navigation">
             <ul>
                 <li><a href="#events" class="nav-link"><i class="fas fa-calendar-alt"></i> Events</a></li>
                 <li><a href="#support" class="nav-link"><i class="fas fa-headset"></i> Get Support</a></li>
@@ -39,70 +40,64 @@
         </nav>
     </header>
 
-    <div class="scrolling-text">
+    <div class="scrolling-text" role="alert">
         <span>N-TEC is now sysfx! Welcome to a new era of tech solutions!</span>
     </div>
 
-    <main>
+    <main role="main">
         <section class="welcome glass-morphism">
             <h2 class="gradient-text">Welcome to sysfx!</h2>
             <p>We provide expert tech solutions, including repairs, security, web development, and networking.</p>
             <p>At Sys Fix, our mission is to bring suitable technology to our clients with precision and expertise.</p>
-            <p>Contact us for support at: <span id="email"></span></p>
-            <script>
-                var user = "nick";
-                var domain = "sysfx.net";
-                var email = user + "@" + domain;
-                document.getElementById("email").innerHTML = '<a href="mailto:' + email + '">' + email + '</a>';
-            </script>
+            <p>Contact us for support at: <span id="email" aria-label="Contact email"></span></p>
             <div class="button-container">
-                <button id="darkModeToggle" class="modern-button">
-                    <i class="fas fa-moon"></i> Toggle Dark Mode
+                <button id="darkModeToggle" class="modern-button" aria-label="Toggle dark mode">
+                    <i class="fas fa-moon" aria-hidden="true"></i> <span class="sr-only">Toggle Dark Mode</span>
                 </button>
                 <button class="modern-button primary" onclick="location.href='#contact'">
-                    <i class="fas fa-paper-plane"></i> Get Started
+                    <i class="fas fa-paper-plane" aria-hidden="true"></i> Get Started
                 </button>
             </div>
         </section>
 
         <section id="location" class="glass-morphism">
             <h2 class="gradient-text">Find Us in Clinton, CT</h2>
-            <div id="map" style="height: 300px; width: 100%; border-radius: 10px;"></div>
+            <div id="map" style="height: 300px; width: 100%; border-radius: 10px;" aria-label="Map showing sysfx location in Clinton, CT"></div>
         </section>
 
         <section id="services" class="services glass-morphism">
             <h2 class="gradient-text">Our Services</h2>
             <div class="service-grid">
-                <div class="service card-hover">
-                    <i class="fas fa-laptop"></i>
+                <article class="service card-hover">
+                    <i class="fas fa-laptop" aria-hidden="true"></i>
                     <h3>Computer Repair</h3>
                     <p>Fast and reliable repairs for all types of computers.</p>
-                </div>
-                <div class="service card-hover">
-                    <i class="fas fa-shield-alt"></i>
+                </article>
+                <article class="service card-hover">
+                    <i class="fas fa-shield-alt" aria-hidden="true"></i>
                     <h3>Cybersecurity</h3>
                     <p>Protect your data with our comprehensive security solutions.</p>
-                </div>
-                <div class="service card-hover">
-                    <i class="fas fa-code"></i>
+                </article>
+                <article class="service card-hover">
+                    <i class="fas fa-code" aria-hidden="true"></i>
                     <h3>Web Development</h3>
                     <p>Create a stunning online presence with our web development services.</p>
-                </div>
-                <div class="service card-hover">
-                    <i class="fas fa-network-wired"></i>
+                </article>
+                <article class="service card-hover">
+                    <i class="fas fa-network-wired" aria-hidden="true"></i>
                     <h3>Networking</h3>
                     <p>Set up and maintain a robust and secure network for your business.</p>
-                </div>
-                <div class="service card-hover">
-                    <i class="fas fa-cloud"></i>
+                </article>
+                <article class="service card-hover">
+                    <i class="fas fa-cloud" aria-hidden="true"></i>
                     <h3>Cloud Solutions</h3>
                     <p>Migrate to the cloud and optimize your IT infrastructure.</p>
-                </div>
-                <div class="service card-hover">
-                    <i class="fas fa-phone"></i>
+                </article>
+                <article class="service card-hover">
+                    <i class="fas fa-phone" aria-hidden="true"></i>
                     <h3>IT Support</h3>
                     <p>24/7 IT support to keep your systems running smoothly.</p>
-                </div>
+                </article>
             </div>
         </section>
 
@@ -110,50 +105,53 @@
             <h2 class="gradient-text">Events & Workshops</h2>
             <p>Join our upcoming sessions on cybersecurity, web development, and more. Stay ahead in the tech world!</p>
             <div class="event-timeline">
-                <div class="event-card">
+                <article class="event-card">
                     <div class="event-date">March 10</div>
                     <div class="event-content">
                         <h3>Cybersecurity 101</h3>
                         <p>Learn the basics of protecting your digital assets</p>
                     </div>
-                </div>
-                <div class="event-card">
+                </article>
+                <article class="event-card">
                     <div class="event-date">March 15</div>
                     <div class="event-content">
                         <h3>Intro to Web Dev</h3>
                         <p>Start your journey in web development</p>
                     </div>
-                </div>
-                <div class="event-card">
+                </article>
+                <article class="event-card">
                     <div class="event-date">March 22</div>
                     <div class="event-content">
                         <h3>Networking Essentials</h3>
                         <p>Master the fundamentals of networking</p>
                     </div>
-                </div>
+                </article>
             </div>
         </section>
 
         <section id="testimonials" class="testimonials glass-morphism">
             <h2 class="gradient-text">Testimonials</h2>
             <div class="testimonial-slider">
-                <div class="testimonial card-hover">
-                    <div class="quote-icon"><i class="fas fa-quote-left"></i></div>
-                    <p>"Sysfx provided excellent service. They fixed my computer quickly and efficiently."</p>
-                    <div class="testimonial-author">- John Doe</div>
-                </div>
-                <div class="testimonial card-hover">
-                    <div class="quote-icon"><i class="fas fa-quote-left"></i></div>
-                    <p>"I'm very happy with the website they built for my business. It's modern and easy to use."</p>
-                    <div class="testimonial-author">- Jane Smith</div>
-                </div>
+                <article class="testimonial card-hover">
+                    <div class="quote-icon"><i class="fas fa-quote-left" aria-hidden="true"></i></div>
+                    <blockquote>
+                        <p>"Sysfx provided excellent service. They fixed my computer quickly and efficiently."</p>
+                        <footer class="testimonial-author">- John Doe</footer>
+                    </blockquote>
+                </article>
+                <article class="testimonial card-hover">
+                    <div class="quote-icon"><i class="fas fa-quote-left" aria-hidden="true"></i></div>
+                    <blockquote>
+                        <p>"I'm very happy with the website they built for my business. It's modern and easy to use."</p>
+                        <footer class="testimonial-author">- Jane Smith</footer>
+                    </blockquote>
+                </article>
             </div>
         </section>
 
         <section id="about" class="about glass-morphism">
             <h2 class="gradient-text">About Us</h2>
-            <p>Sysfx is a team of experienced tech professionals dedicated to providing top-notch solutions to our
-                clients. We are passionate about technology and committed to delivering exceptional service.</p>
+            <p>Sysfx is a team of experienced tech professionals dedicated to providing top-notch solutions to our clients. We are passionate about technology and committed to delivering exceptional service.</p>
         </section>
 
         <section id="contact" class="contact glass-morphism">
@@ -161,22 +159,15 @@
             <div class="contact-grid">
                 <div class="contact-info">
                     <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
-                        <a href="#" class="email-link" onclick="sendEmail()">Click to email</a>
-                        <script>
-                            function sendEmail() {
-                                var user = "nick";
-                                var domain = "sysfx.net";
-                                var email = user + "@" + domain;
-                                window.location.href = "mailto:" + email;
-                        </script>
+                        <i class="fas fa-envelope" aria-hidden="true"></i>
+                        <a href="#" class="email-link" id="email-link" aria-label="Email sysfx">Click to email</a>
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-phone"></i>
-                        <span>(860) 375-4425</span>
+                        <i class="fas fa-phone" aria-hidden="true"></i>
+                        <a href="tel:+18603754425" aria-label="Call sysfx at (860) 375-4425">(860) 375-4425</a>
                     </div>
                     <div class="contact-item">
-                        <i class="fas fa-map-marker-alt"></i>
+                        <i class="fas fa-map-marker-alt" aria-hidden="true"></i>
                         <span>123 Main Street, Clinton, CT</span>
                     </div>
                 </div>
@@ -184,85 +175,8 @@
         </section>
     </main>
 
-    <footer class="glass-morphism">
+    <footer class="glass-morphism" role="contentinfo">
         <p>© 2025 sysfx. All rights reserved.</p>
     </footer>
-
-    <script>
-        // Particles.js config
-        particlesJS('particles-js', {
-            particles: {
-                number: { value: 80, density: { enable: true, value_area: 800 } },
-                color: { value: '#ffffff' },
-                shape: { type: 'circle' },
-                opacity: { value: 0.5, random: false },
-                size: { value: 3, random: true },
-                line_linked: { enable: true, distance: 150, color: '#ffffff', opacity: 0.4, width: 1 },
-                move: { enable: true, speed: 6, direction: 'none', random: false, straight: false, out_mode: 'out', bounce: false }
-            },
-            interactivity: {
-                detect_on: 'canvas',
-                events: {
-                    onhover: { enable: true, mode: 'repulse' },
-                    onclick: { enable: true, mode: 'push' },
-                    resize: true
-                }
-            },
-            retina_detect: true
-        });
-
-        // Typing effect
-        document.addEventListener("DOMContentLoaded", function() {
-            const text = "Next-gen tech solutions.";
-            let index = 0;
-            function typeEffect() {
-                if (index < text.length) {
-                    document.getElementById("typing-effect").innerHTML += text.charAt(index);
-                    index++;
-                    setTimeout(typeEffect, 100);
-                }
-            }
-            typeEffect();
-
-            // Current time
-            function updateTime() {
-                const now = new Date();
-                document.getElementById('current-time').innerHTML = 
-                    `<i class="fas fa-clock"></i> ${now.toLocaleTimeString()}`;
-            }
-            updateTime();
-            setInterval(updateTime, 1000);
-
-            // Weather widget
-            function fetchWeather() {
-                // Simulated weather data (replace with actual API call)
-                setTimeout(() => {
-                    document.getElementById('weather-widget').innerHTML = 
-                        `<i class="fas fa-sun"></i> 0°F in CT`;
-                }, 1000);
-            }
-            fetchWeather();
-        });
-
-        // Dark mode toggle
-        const darkModeToggle = document.getElementById('darkModeToggle');
-        darkModeToggle.addEventListener('click', () => {
-            document.body.classList.toggle('dark-mode');
-            const icon = darkModeToggle.querySelector('i');
-            icon.classList.toggle('fa-moon');
-            icon.classList.toggle('fa-sun');
-        });
-
-        // Simple map (replace with actual map implementation)
-        function initMap() {
-            const mapDiv = document.getElementById('map');
-            mapDiv.innerHTML = `
-                <div style="background: #eee; height: 100%; display: flex; align-items: center; justify-content: center;">
-                    <p>Map of CT</p>
-                </div>
-            `;
-        }
-        initMap();
-    </script>
 </body>
 </html>
