--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
     <div id="particles-js" class="particles-container"></div>
+    <div class="cursor"></div>
     <header class="glass-morphism" role="banner">
         <div class="status-bar">
             <div id="current-time" aria-live="polite"></div>
@@ -112,6 +113,24 @@
                     <p>24/7 IT support to keep your systems running smoothly, no matter the challenge.</p>
                     <p class="extra-info">Round-the-clock assistance with remote and on-site options available.</p>
                 </article>
+            </div>
+        </section>
+
+        <section class="stats">
+            <h2 class="gradient-text">Our Impact</h2>
+            <div class="stats-grid">
+                <div class="stat-item">
+                    <div class="stat-number" data-count="500">0</div>
+                    <div class="stat-label">Clients Served</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-number" data-count="1000">0</div>
+                    <div class="stat-label">Repairs Completed</div>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-number" data-count="50">0</div>
+                    <div class="stat-label">Websites Built</div>
+                </div>
             </div>
         </section>
 
